src/test/resources/ttml/test-suite/pass/dur004-pass.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- See corresponding fail test -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
  </head>
  <body>
    <div>
      <p begin="2.5s" end="3s" tts:fontSize="300%">a</p>
      <p begin="3s" end="4s" tts:fontSize="300%">あああああああああああああああああああああああああああ</p>
    </div>
  </body>
</tt>
